<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="yes">Yes</string>
	<string name="no">No</string>

    <string name="app_name">DecideForMe</string>
    <string name="email_subject">DecideForMe Report</string>
    <string name="splash_screen">SplashScreen</string>
    <string name="about_app">About DecideForMe</string>
    <string name="search_screen">Search</string>
    <string name="report_ident">This email was generated by DecideForMe:</string>
    <string name="no_decisions">No Decisions right now :  </string>
    <string name="decision_id">_decisionid</string>
    <string name="decision_name">Decision Name: </string>
    <string name="decision_description">Description: </string>

	<string name="decision_home">Decision Home</string>
    <string name="my_decisions">My Decisions</string>
    <string name="open_decision">Open Decision</string>
    <string name="add_decision">Add Decision</string>
    <string name="edit_decision">Edit Decision</string>
    <string name="delete_decision">Delete Decision</string>
    
    <string name="no_competitors">No choices right now :  </string>
    <string name="competitors">Competitors</string>
   	<string name="add_competitor">Add Competitor</string>
   	<string name="edit_competitor">Edit Competitor</string>
    <string name="delete_competitor">Delete Competitor</string>
    <string name="competitor_name">Competitor Name: </string>
    
    <string name="report_no_competitors">There were no competitors</string>
    <string name="report_one_competitor">There was only one competitor:</string>
    <string name="report_competitors">You were deciding between the options of </string>
    <string name="report_no_criteria">There were no criteria selected</string>
    <string name="report_one_criterion">There was only one criterion chosen to evaluate the options:</string>
    <string name="report_criteria">The criteria used to evaluate the options were </string>
    <string name="empty_string"></string>
    
    <string name="report_preference_preamble">Based on your ratings, </string>
    <string name="report_no_preference"> there was no preferred option</string>
    <string name="report_one_preference"> is the preferred option overall</string>
    <string name="report_preferences"> were considered to be equally preferable options</string>
    
    <string name="report_competitor_strength_preamble">scored well against</string>
    <string name="report_competitor_weakness_preamble">, but was rated lower on</string>
    <string name="report_no_competitor_ratings"> nothing, as there were no ratings</string>
    
    <string name="report_criterion_preamble">The best rating for</string>
    <string name="report_criterion_strength_preamble">was given to</string>
    <string name="report_criterion_weakness_preamble">, and the worst was given to</string>
    <string name="jointly">jointly</string>
    <string name="both">both</string>
    <string name="ranking_table">Ranking Table:</string>
    
    <string name="no_criteria">No criteria right now :</string>

    <string name="criterion_name">Criterion Name: </string>
    <string name="rating_system_select">Choose a rating system:</string>

    <string name="criteria">Criteria</string>
    <string name="add_criterion">Add Criterion</string>
    <string name="edit_criterion">Edit Criterion</string>
    <string name="delete_criteria">Delete Criteria</string>
    <string name="delete_criterion">Delete Criterion</string>
    
    <string name="rating_screen">Rating Screen</string>
    <string name="report_screen">Decision Report</string>
    
    
    <string name="want_to_delete">Want to delete \'"</string>
    <string name="nothing_deleted">Ok, didn\'t delete anything.</string>
    <string name="deleted">Deleted \'</string>
        
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    
    <string name="add_competitors">Add Competitors</string>
    
    <string name="menu_insert">Add New Decision</string>
    <string name="menu_delete_decision">Delete Decision</string>
    <string name="menu_delete_competitor">Delete Competitor</string>
    <string name="menu_delete_criterion">Delete Criterion</string>
    <string name="menu_add">Add Decision</string>
    <string name="menu_save">Save</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_discard">Discard</string>
    <string name="decision_spinner">DecisionSpinner</string>
    <string name="nothing_to_save">There is nothing to save</string>
    
    <string name="description_logo">Description</string>
    <string name="dashboard_action">Action</string>
    
    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_save">Save</string>
    
    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_feature1">My Decisions</string>
    <string name="title_feature2">Add Decision</string>
    <string name="title_feature3">Feature 3</string>
    <string name="title_feature4">Feature 4</string>
    <string name="title_feature5">Feature 5</string>
    <string name="title_feature6">Feature 6</string>
    
    <string name="about_header">The Skinny</string>
    <string name="about_intro">DecideForMe supports a rational decision-making process. When deciding between options, DecideForMe\'s decision wizard will help you make a decision grid to rate your choices against each other. Once you have finished rating your choices, you can grab the automatically generated report and email it using any email application installed on your phone.</string>
    <string name="instructions_header">The Instructions (a 6-step plan)</string>
    <string name="instructions_intro">Follow these steps to be decisive!</string>
    <string name="instructions_new">1. Add a new Decision with the \'Add Decision\' button on the homepage. This opens the Decision Home page, with a bunch of tabs.</string>
    <string name="instructions_info">2. On the info tab, give your decision a name and a description.</string>
    <string name="instructions_choices">3. On the choices tab, add the things you\'re deciding between.</string>
    <string name="instructions_criteria">4. The criteria tab provides a way of deciding between your choices. Criteria are traits or characteristics like speed, cost, and desirability. Your criteria will be given a rating system, for example \'How Good?\', or \'Traffic Lights\'</string>
    <string name="instructions_rate">5. The rating tab gives you the rating grid, where you can rate each of your choices against your selected criteria.</string>
    <string name="instructions_report">6. Done rating? Head back to the main page, and go to \'My Decisions\'. The report button will give you a summary of your decision, which you can then forward in an email.</string>
    <string name="search_intro">Content for the Search page goes here.</string>
</resources>

