<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
      	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:stretchColumns="0">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/title_home"
            android:onClick="onClickHome" />

        <ImageView style="@style/TitleBarSeparator" />
        <TextView style="@style/TitleBarText" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:src="@drawable/title_about"
            android:onClick="onClickAbout" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/title_search"
            android:onClick="onClickSearch" />
    </LinearLayout>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="fill_parent">

		<HorizontalScrollView 	xmlns:android="http://schemas.android.com/apk/res/android"
						      	android:layout_width="fill_parent" 
						      	android:layout_height="fill_parent">
						      	
		    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/myDecisionsLayout"
		      	android:layout_width="fill_parent"
		    	android:layout_height="fill_parent">
			</TableLayout> 
			
	  	</HorizontalScrollView>
	</ScrollView>
</TableLayout>
